[gd_scene load_steps=10 format=2]

[ext_resource path="res://game assets/Boxes/Tier 1/Box1.png" type="Texture" id=1]
[ext_resource path="res://Box.gd" type="Script" id=2]
[ext_resource path="res://game assets/Boxes/Tier 1/Box1Outline.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 5.4375 )

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 48.2028

[sub_resource type="Animation" id=5]
resource_name = "Outline_Appear"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("box_sprite/Outline:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Outline_Disappear"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("box_sprite/Outline:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("box_sprite/Outline:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0, 0, 0 ) ]
}

[node name="Box" type="RigidBody2D" groups=["pushables"]]
script = ExtResource( 2 )

[node name="box_sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Outline" type="Sprite" parent="box_sprite"]
visible = false
modulate = Color( 0.0627451, 0, 0, 0 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Detectplyr" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detectplyr"]
material = SubResource( 4 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Outline_Appear = SubResource( 5 )
anims/Outline_Disappear = SubResource( 6 )
anims/RESET = SubResource( 7 )

[connection signal="body_entered" from="Detectplyr" to="." method="_on_Detectplyr_body_entered"]
[connection signal="body_exited" from="Detectplyr" to="." method="_on_Detectplyr_body_exited"]
